@@ -6,6 +6,10 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23193).
   * The -adaptive-sharpen option is now sharpening properly (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23211).
+  * Sometimes an image says its grayscale when its not (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23217).
+  * Use malloc() to allocate X image data (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23221).
 
 2013-04-15  6.8.4-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.4-10, SVN revision 11851.
